--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -11,3 +11,4 @@ serde = "1.0.214"
 serde_json = "1.0.132"
 tokio = "1.41.0"
 futures = "0.3.31"
+reqwest = { version = "0.12.9", features = ["json"] }
