--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -12,5 +12,7 @@ serde_json = "1.0.132"
 tokio = "1.41.0"
 futures = "0.3.31"
 reqwest = { version = "0.12.9", features = ["json"] }
-rocket_okapi = { version = "0.8.0", features = ["swagger"] }
+rocket_okapi = { version = "0.9.0", features = ["swagger"] }
 schemars = "0.8.21"
+dotenv = "0.15.0"
+toml = "0.8.19"
